<resources>
    <string name="app_name">Intent</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="number2">Values 2</string>
    <string name="value2">Input value</string>
    <string name="submit">Calculate</string>
    <string name="no">Values 2</string>
    <string name="password_hint">Input number</string>
    <string name="parcelable">Parcelable</string>
    <string name="result">RESULT</string>
    <string name="value1">Input value</string>
    <string name="number1">Values 1</string>
    <string name="android_bundle">Test Multiple Calculator</string>
    <!--    <string name="age">Age</string>-->
    <!--    <string name="age_hint">Input your age</string>-->
    <string name="exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
